Some code refactoring. Fixed some CSS issues on Firefox.

--- a/src/main/resources/com/nuvola/gxpenses/client/resource/css/generalStyle.css
+++ b/src/main/resources/com/nuvola/gxpenses/client/resource/css/generalStyle.css
@@ -193,16 +193,20 @@
     border-bottom: 2px solid #6F7277;
     -moz-border-radius-topleft: 5px;
     -webkit-border-top-left-radius: 5px;
+    border-top-left-radius: 5px;
     -moz-border-radius-topright: 5px;
     -webkit-border-top-right-radius: 5px;
+    border-top-right-radius: 5px;
 }
 
 .transactionListFooter {
     padding: 12px;
     -moz-border-radius-bottomleft: 5px;
     -webkit-border-bottom-left-radius: 5px;
+    border-bottom-left-radius: 5px;
     -moz-border-radius-bottomright: 5px;
     -webkit-border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;
     color: #fff;
     background-color: #555;
     vertical-align: middle;
