--- a/src/main/resources/com/nuvola/gxpenses/client/resource/css/tagListStyle.css
+++ b/src/main/resources/com/nuvola/gxpenses/client/resource/css/tagListStyle.css
@@ -15,7 +15,7 @@
     background-color: #ccc;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    border-radius: 4x;
+    border-radius: 4px;
 }
 
 .cellListOddItem {
